@@ -25,7 +25,9 @@
 #include "core/proto.h"
 #include "core/OS_utils.h"
 #include "core/siril_log.h"
+#include "core/arithm.h"
 #include "algos/astrometry_solver.h"
+#include "algos/demosaicing.h"
 #include "algos/statistics.h"
 #include "algos/siril_wcs.h"
 #include "core/processing.h"
@@ -631,6 +633,35 @@ int crop(fits *fit, rectangle *bounds) {
 	if (bounds->w <= 0 || bounds->h <= 0 || bounds->x < 0 || bounds->y < 0) return -1;
 	if (bounds->x + bounds->w > fit->rx) return -1;
 	if (bounds->y + bounds->h > fit->ry) return -1;
+	int cfa = get_cfa_pattern_index_from_string(fit->keywords.bayer_pattern);
+	switch (cfa) {
+		case BAYER_FILTER_NONE:
+			break;
+		case BAYER_FILTER_RGGB: // Fallthrough intentional
+		case BAYER_FILTER_BGGR:
+		case BAYER_FILTER_GBRG:
+		case BAYER_FILTER_GRBG:
+			bounds->x &= ~1;
+			bounds->y &= ~1;
+			bounds->w &= ~1;
+			bounds->h &= ~1;
+			if(bounds->w < 2)
+				bounds->w = 2;
+			if (bounds->h < 2)
+				bounds->h = 2;
+			siril_log_message(_("Rounding selection to match CFA pattern\n"));
+			break;
+		default: // X-trans
+			bounds->x = round_down_to_multiple(bounds->x, 6);
+			bounds->y = round_down_to_multiple(bounds->y, 6);
+			bounds->w = round_down_to_multiple(bounds->w, 6);
+			bounds->h = round_down_to_multiple(bounds->h, 6);
+			if(bounds->w < 2)
+				bounds->w = 2;
+			if (bounds->h < 2)
+				bounds->h = 2;
+			siril_log_message(_("Rounding selection to match CFA pattern\n"));
+	}
 	int orig_ry = fit->ry; // required to compute flips afterwards
 	int target_rx, target_ry;
 	Homography H = { 0 };
