@@ -24,6 +24,7 @@ XX/XX/25
 * Added a fork of tkfilebrowser to support improved script UI file selection on Linux (!864)
 * Implemented a better linear regression algorithm for SPCC (!853)
 * Python scripts are now sorted alphabetically (#1559)
+* Made crop and ROI selection CFA-aware (#1579)
 * Added an optional rate limit for smooth scroll zoom speed (#1576)
 * Added SirilInterface.create_new_seq() and SirilInterface.is_cli() in sirilpy (!867)
 
